compiler/testData/diagnostics/tests/dynamicTypes/unsupported.kt
val foo: <!UNSUPPORTED!>dynamic<!> = 1